updates to match formatting updates in .md file

--- a/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/make_classification_training_data.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/make_classification_training_data.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "---\n",
-    "syncID: \n",
+    "syncID: 6eb4422d262440408f7905d1dd3d1ae2\n",
     "title: \"Make Training Data for Species Modeling from NEON TOS Vegetation Structure Data\"\n",
     "description: \"Create a training dataset for tree classification using TOS vegetation structure data.\"\n",
     "dateCreated: 2025-07-30\n",
@@ -43,14 +43,16 @@
     "\n",
     "- The paper <a href=\"https://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.3002700\" target=_blank>Individual canopy tree species maps for the National Ecological Observatory Network</a> outlines methods for large-scale classification using NEON data. The associated NEON Science Seminar <a href=\"https://www.neonscience.org/get-involved/events/science-seminar-harnessing-neon-enable-future-forest-remote-sensing\" target=_blank>Harnessing NEON to enable the future of forest remote sensing</a> may be a useful resource. This talk provides a high-level overview of modeling approaches for tree crown delineation and tree classification using NEON airborne remote sensing data. You can also watch the video below.\n",
     "\n",
-    "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/watch?v=Weru3hJbwTs&t=3s\" frameborder=\"0\" allowfullscreen></iframe>\n",
+    "<p align=\"center\"><iframe width=\"960\" height=\"540\" src=\"https://www.youtube.com/embed/Weru3hJbwTs\" title=\"Science Seminar: Harnessing NEON to enable the future of forest remote sensing\" frameborder=\"0\" allowfullscreen></iframe>\n",
     "\n",
-    "- Refer to the <a href=\"https://data.neonscience.org/api/v0/documents/NEON_vegStructure_userGuide_vE?inline=true\" target=_blank> vegetation structure user guide</a> for more details on this data product, and to better understand the data quality flags, the sampling.\n",
+    "- Refer to the <a href=\"https://data.neonscience.org/api/v0/documents/NEON_vegStructure_userGuide_vE?inline=true\" target=_blank>Vegetation Structure User Guide</a> for more details on this data product, and to better understand the data quality flags, the sampling.\n",
     "\n",
-    "**Disclaimer**: this notebook is intended to provide an example of how to create an initial training data set for pairing with remote sensing data, and to conduct some exploratory analysis of the vegetation structure data. This does not incporporate outlier detection and removal, or comprehensive pre-processing steps. As part of creating a machine learning model, it is important to assess the training data quality and look for outliers or other potential data quality issues which may impact model results.\n",
+    "**Disclaimer**: this notebook is intended to provide an example of how to create an initial training data set for pairing with remote sensing data, and to conduct some exploratory analysis of the vegetation structure data. This does not incorporate outlier detection and removal, or comprehensive pre-processing steps. As part of creating a machine learning model, it is important to assess the training data quality and look for outliers or other potential data quality issues which may impact model results. Refer to the <a href=\"https://www.neonscience.org/resources/learning-hub/tutorials/tree-heights-veg-structure-chm\" target=_blank>Compare tree height measured from the ground to a Lidar-based Canopy Height Model</a> lesson (the first additional resource above) for more details on how you would address geographic mismatch between the AOP and TOS data.\n",
     "\n",
     "\n",
-    "</div>"
+    "</div>\n",
+    "\n",
+    "Let's get started! First, import the required Python packages."
    ]
   },
   {
@@ -78,7 +80,7 @@
     "\n",
     "Download the vegetation structure data using the `load_by_product` function in the `neonutilities` package (imported as `nu`). Inputs to the function can be shown by typing `help(load_by_product)`.\n",
     "  \r\n",
-    "Refer to t  e<a href=https://www.neonscience.org/sites/default/files/cheat-sheet-neonUtilities.pdf target=_blank R neonutilities cheat sheet</a>  or the neonUtilities package for more details and the complete index of possible function inputs. The cheat sheet is focused on the R package, but nearly all the inputs are the sam.e\n",
+    "Refer to t  e<a href\"=https://www.neonscience.org/sites/default/files/cheat-sheet-neonUtilities.pd\"f target=_blank R neonutilities cheat sheet</a>  or the neonUtilities package for more details and the complete index of possible function inputs. The cheat sheet is focused on the R package, but nearly all the inputs are the sam.e\n",
     "\n",
     "Note that in this example, we will pull in all the woody vegetation data (collected over all years), but if you are trying to modeldata collected  in a single year, you can select just that year by specifying the `startdate` and `enddate`, or later filtering out the vegetation data by the` eventI`D We have set `check_size=False` since the data are not very large, but to check the size of what the data you are downloading first, you could omit this input, or set it to `True`.."
    ]
@@ -328,7 +330,7 @@
    "source": [
     "### Combine location with tree traits\n",
     "\n",
-    "Now we have the mapped locations of individuals in the `vst_mappingandtagging` table, and the annual measurements of tree dimensions such as height and diameter in the vst_apparentindividual table. To bring these measurements together, join the two tables. Refer to the <a href=\"https://data.neonscience.org/api/v0/documents/quick-start-guides/NEON.QSG.DP1.00001.001v2?inline=TRUE\" target=_blank>Quick Start Guide for Vegetation Structure</a> for more information about the data tables and the joining instructions."
+    "Now we have the mapped locations of individuals in the `vst_mappingandtagging` table, and the taxa (species, or `taxonID`), family, scientific name, as well as annual measurements of tree dimensions such as height and diameter in the `vst_apparentindividual` table. To bring these measurements together, join the two tables. Refer to the <a href=\"https://data.neonscience.org/api/v0/documents/quick-start-guides/NEON.QSG.DP1.00001.001v2?inline=TRUE\" target=_blank>Quick Start Guide for Vegetation Structure</a> for more information about the data tables and the joining instructions."
    ]
   },
   {
@@ -1351,9 +1353,7 @@
     "- [ACRU](https://plants.usda.gov/plant-profile/ACRU): Red Maple (Acer rubrum L.)\n",
     "- [CAGL8](https://plants.usda.gov/plant-profile/CAGL8): Sweet pignut hickory (Carya glabra (Mill.))\n",
     "\n",
-    "When carrying out classification, the species that only have small representation (1-5 samples) may not be modeled accurately due to a lack of sufficient training data. The challenge of mapping rarer species due to insufficient training data is well known (and is sometimes called the 'long-tail' effect) e.g. In the next tutorial, we will remove these poorly represented samples when we generate our model. \n",
-    "\n",
-    "Zhang, C., Chen, Y., Xu, B. et al. Improving prediction of rare species’ distribution from community data. Sci Rep 10, 12230 (2020). https://doi.org/10.1038/s41598-020-69157-x\n",
+    "When carrying out classification, the species that only have small representation (1-5 samples) may not be modeled accurately due to a lack of sufficient training data. The challenge of mapping rarer species due to insufficient training data is well known. In the next tutorial, we will remove these poorly represented samples before generating a model. \n",
     "\n",
     "## Write training dataframe to csv file\n",
     "\n",
@@ -1457,7 +1457,7 @@
    "source": [
     "## Recap\n",
     "\n",
-    "In this lesson we have curated a training data set containing information about the tree family and species as well as its geographic location in UTM x, y coordinates. We can now pair this dataset with remote sensing data and create a model to predict the tree's family based off airborne spectral data. The next tutorial, <a href=\"https://www.neonscience.org/resources/learning-hub/tutorials/refl-classification-pyxarray\" target=_blank>DP1.10098.001</a>, will show how to do this!"
+    "In this lesson we have curated a training data set containing information about the tree family and species as well as its geographic location in UTM x, y coordinates. We can now pair this dataset with remote sensing data and create a model to predict the tree's family based off airborne spectral data. The next tutorial, <a href=\"https://www.neonscience.org/resources/learning-hub/tutorials/refl-classification-pyxarray\" target=_blank>Tree Classification with NEON Airborne Imaging Spectrometer Data using Python xarray</a>, will show how to do this!"
    ]
   }
  ],
