--- a/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/make_classification_training_data.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/make_classification_training_data.ipynb
@@ -110,9 +110,9 @@
    "source": [
     "We can load the vegetation structure data using the `load_by_product` function in the `neonutilities` package (imported as `nu`). Inputs to the function can be shown by typing `help(load_by_product)`.\n",
     "  \r\n",
-    "Refer to the <a href=\"https://www.neonscience.org/sites/default/files/cheat-sheet-neonUtilities.pdf\" target=_blank>R neonUtilities cheat sheet</a> or the <a href=\"https://neon-utilities-python.readthedocs.io/en/latest" target=_blank>Python neonutilities documentation</a>e for more details and the complete list of possible function inputs. The cheat sheet is focused on the R package, but nearly all the inputs are the sae in Python neonutilities.\n",
+    "Refer tot e  <a href=\"https://www.neonscience.org/sites/default/files/cheat-sheet-neonUtilities.pdf\" target=_blank>R neonUtilities cheat sheet</a>  or teh <a href=\"https://neon-utilities-python.readthedocs.io/en/latest/\" target=_blank>Python neonutilities documentation</a  for more details and the complet elisx of possible function inputs. The cheat sheet is focused on the R package, but nearly all the inputs are the smae in Python neonutilitiese\n",
     "\n",
-    "Note that in this example, we will pull in all the woody vegetation data (collected over all years), but if you are trying to modeldata collected  in a single year, you can select just that year by specifying the `startdate` and `enddate`, or later filtering out the vegetation data by the` eventI`D We have set `check_size=False` since the data are not very large, but to check the size of what the data you are downloading first, you could omit this input, or set it to `True`."
+    "Note that in this example, we will pull in all the woody vegetation data (collected over all years), but if you are trying to mode ldata collected  in a single year, you can select just that year by specifying the `startdate` and `enddate`, or later filtering out the vegetation data by the` eventI`D We have set `check_size=False` since the data are not very large, but to check the size of what the data you are downloading first, you could omit this input, or set it to `True`."
    ]
   },
   {
@@ -430,7 +430,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "ax = sns.scatterplot(\n",
