add outline numbering

--- a/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/make_classification_training_data.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/make_classification_training_data.ipynb
@@ -65,7 +65,7 @@
     "\n",
     "</div>\n",
     "\n",
-    "# Download and Explore Vegetation Structure Data (DP1.10098.001)\n",
+    "## 1. Download and Explore Vegetation Structure Data (DP1.10098.001)\n",
     "\n",
     "In this first section we’ll load the vegetation structure data, find the locations of the mapped trees, and join to the species and family observations.\n",
     "\n",
@@ -194,7 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Determine the geographic location of the surveyed vegetation\n",
+    "## 2. Determine the geographic location of the surveyed vegetation\n",
     "\n",
     "Loop through all of the points in `veg_points` to determine the easting and northing from the <a href=\"https://data.neonscience.org/data-api/endpoints/locations/\" target=_blank>NEON Locations API</a>."
    ]
@@ -298,6 +298,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 3. Filter to trees within an AOP tile extent\n",
+    "\n",
     "Now create a new dataframe containing only the veg data that are within a single AOP tile (which are 1 km x 1 km in size). For this, you will need to know the bounds (minimum and maximum UTM easting and northing) of the area you are sampling. For this exercise, we will choose the AOP data with SW (lower left) UTM coordinates of 364000, 4305000. This tile encompasses the NEON tower at the SERC site."
    ]
   },
@@ -404,7 +406,7 @@
     "\n",
     "When carrying out classification, the species that only have small representation (1-5 samples) may not be modeled accurately due to a lack of sufficient training data. The challenge of mapping rarer species due to insufficient training data is well known. In the next tutorial, we will remove these poorly represented samples before generating a model. \n",
     "\n",
-    "## Write training dataframe to csv file\n",
+    "## 4. Write training dataframe to csv file\n",
     "\n",
     "Nonetheless, we have a fairly decent training dataset to work with. We can save the dataframe to a csv file called `serc_training_data.csv` as follows:"
    ]
@@ -422,7 +424,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plot trees in map view\n",
+    "## 5. Plot tree families in map view\n",
     "\n",
     "Finally, we can make a quick plot using `seaborn` (imported as `sns`) to show the spatial distrubtion of the trees surveyed in this area, along with their species (`scientificName`). Most of this code helps improve the formatting and appearance of the figure; the first `sns.scatterplot` chunk is all you really need to do to plot the essentials."
    ]
