split cell after objectives div

--- a/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/make_classification_training_data.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/make_classification_training_data.ipynb
@@ -63,8 +63,13 @@
     "\n",
     "- Refer to the <a href=\"https://data.neonscience.org/api/v0/documents/NEON_vegStructure_userGuide_vE?inline=true\" target=_blank>Vegetation Structure User Guide</a> for more details on this data product, and to better understand the data quality flags, the sampling.\n",
     "\n",
-    "</div>\n",
-    "\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. Download and Explore Vegetation Structure Data (DP1.10098.001)\n",
     "\n",
     "In this first section we’ll load the vegetation structure data, find the locations of the mapped trees, and join to the species and family observations.\n",
