updates to run on OpenScapes

--- a/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/aop_refl_xarray_classification.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/aop_refl_xarray_classification.ipynb
@@ -175,11 +175,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "method 2: set the token as an environment variable using the dotenv package\n",
-    "```\n",
+    "```python\n",
+    "# method 2: set the token as an environment variable using the dotenv package\n",
     "dotenv.set_key(dotenv_path=\".env\",\n",
-    "key_to_set=\"NEON_TOKEN\",\n",
+    "key_to_set=\"NEON_TOKEN\",#\n",
     "value_to_set=\"YOUR_TOKEN_HERE\")\n",
+    "\n",
+    "# to retrieve the token that you set as an environment variable, use:\n",
+    "NEON_TOKEN=os.environ.get(\"NEON_TOKEN\")\n",
     "```"
    ]
   },
@@ -362,7 +365,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "map1 = plot_folium_shapes(\n",
     "    shapefiles=[site_aop_polygon],\n",
     "    names=['NEON AOP Flight Bounding Box']\n",
@@ -446,7 +448,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Unzip the 90 percent footprint tower airshed file\n",
+    "# unzip the 90 percent footprint tower airshed file\n",
     "with ZipFile(f\"./data/90percentfootprint.zip\", 'r') as zip_ref:\n",
     "    zip_ref.extractall('./data/shapefiles')"
    ]
@@ -457,7 +459,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "# read in the neon tower airshed polygon shapefile and display\n",
     "neon_tower_airshed = gpd.read_file(\"./data/shapefiles/90percentfootprint/90percent_footprint.shp\")\n",
     "neon_tower_airshed.head()"
    ]
@@ -591,18 +593,7 @@
     "\n",
     "We can download the reflectance data either using the neonutilities function `nu.by_file_aop`, which downloads all tiles for the entire site for a given year, or `nu.by_tile_aop`. To figure out the inputs of these functions, you can type `nu.by_tile_aop?`, for example. \n",
     "\n",
-    "AOP data are projected into a WGS84 coordinate system, with coordinates in UTM x, y. When using `nu.by_tile_aop` you need to specify the UTM easting and northing values for the tiles you want to download. If you're not sure the extent of the site, you can use the function `nu.get_aop_tile_extents`. Let's do that here, for the SOAP site collected in 2024. First set up your NEON token as follows, replacing the `\"YOUR TOKEN HERE\"` string with the token copied from the NEON \"[My Account](https://data.neonscience.org/myaccount)\" page. This will help speeed up downloads, and is strongly recommended (and will likely soon be required) for interacting with the NEON data via the API."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```\n",
-    "dotenv.set_key(dotenv_path=\".env\",\n",
-    "key_to_set=\"NEON_TOKEN\",\n",
-    "value_to_set=\"YOUR TOKEN HERE\")\n",
-    "```"
+    "AOP data are projected into a WGS84 coordinate system, with coordinates in UTM x, y. When using `nu.by_tile_aop` you need to specify the UTM easting and northing values for the tiles you want to download. If you're not sure the extent of the site, you can use the function `nu.get_aop_tile_extents`. Let's do that here, for the SOAP site collected in 2024.You will use the same token you defined at the beginning of the tutorial"
    ]
   },
   {
@@ -614,7 +605,7 @@
     "serc2025_utm_extents = nu.get_aop_tile_extents(refl_rev2_dpid, \n",
     "                                               site_id,\n",
     "                                               year,\n",
-    "                                               token=os.environ.get(\"NEON_TOKEN\"))"
+    "                                               token=NEON_TOKEN)"
    ]
   },
   {
@@ -642,13 +633,80 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The function below displays all of the folders that we've downloaded. You can also use your File Explorer to look at the contents of what you have downloaded. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Unzip the lidar tile boundary file\n",
-    "with ZipFile(f\"./data/shapefiles/2025_SERC_7_TileBoundary.zip\", 'r') as zip_ref:\n",
+    "def find_data_subfolders(root_dir):\n",
+    "    \"\"\"\n",
+    "    Recursively finds subfolders within a directory that contain data (files)\n",
+    "    and excludes subfolders that only contain other subfolders.\n",
+    "\n",
+    "    Args:\n",
+    "        root_dir: The path to the root directory to search.\n",
+    "\n",
+    "    Returns:\n",
+    "        A list of paths to the subfolders containing data.\n",
+    "    \"\"\"\n",
+    "    data_subfolders = []\n",
+    "    for root, dirs, files in os.walk(root_dir):\n",
+    "        # Check if the current directory has both subdirectories and files\n",
+    "        if dirs and files:\n",
+    "            # Iterate through subdirectories to find those that contain files\n",
+    "            for dir_name in dirs:\n",
+    "                dir_path = os.path.join(root, dir_name)\n",
+    "                if any(os.path.isfile(os.path.join(dir_path, f)) for f in os.listdir(dir_path)):\n",
+    "                    data_subfolders.append(dir_path)\n",
+    "        # If the current directory has no subdirectories, but has files, we still want to keep the directory.\n",
+    "        elif files:\n",
+    "            if root != root_dir:  # Avoid adding the root directory itself if it has files\n",
+    "                data_subfolders.append(root)\n",
+    "\n",
+    "    return data_subfolders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use the find_data_subfolders function to see what has been downloaded\n",
+    "chm_subfolders = find_data_subfolders(r'./data/DP3.30015.001')\n",
+    "chm_subfolders # display the subfolders"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# see the path of the zip file that was downloaded (ends in .zip):\n",
+    "for root, dirs, files in os.walk(r'./data/DP3.30015.001'):\n",
+    "    for name in files:\n",
+    "        if name.endswith('.zip'):\n",
+    "            print(os.path.join(root, name))  # print file name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# unzip the lidar tile boundary file\n",
+    "# uncomment if you skipped the download section, and comment the next line (starting with \"with ZipFile\")\n",
+    "# with ZipFile(f\"./data/shapefiles/2025_SERC_7_TileBoundary.zip\", 'r') as zip_ref: \n",
+    "with ZipFile(f\"./data/DP3.30015.001/neon-aop-provisional-products/2025/FullSite/D02/2025_SERC_7/Metadata/DiscreteLidar/TileBoundary/2025_SERC_7_TileBoundary.zip\",'r') as zip_ref:\n",
     "    zip_ref.extractall('./data/shapefiles/2025_SERC_7_TileBoundary')"
    ]
   },
@@ -658,8 +716,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aop_tile_boundaries = gpd.read_file(\"./data/shapefiles/2025_SERC_7_TileBoundary/shps/NEON_D02_SERC_DPQA_2025_merged_tiles_boundary.shp\")\n",
-    "aop_tile_boundaries.head()"
+    "# read in the tile bounadry shapefile\n",
+    "aop_tile_boundaries = gpd.read_file(\"./data/shapefiles/2025_SERC_7_TileBoundary/shps/NEON_D02_SERC_DPQA_2025_merged_tiles_boundary.shp\")"
    ]
   },
   {
@@ -671,7 +729,7 @@
     "# append this last boundary file to the existing neon_shapefiles list\n",
     "neon_shapefiles.append(aop_tile_boundaries)\n",
     "\n",
-    "# plot all shapefiles together\n",
+    "# plot all NEON SERC shapefiles together\n",
     "map3 = plot_folium_shapes(\n",
     "    shapefiles=neon_shapefiles,\n",
     "    names=['NEON AOP Flight Bounding Box', 'NEON Terrestrial Sampling Boundaries', 'NEON Tower Airshed', 'AOP Tile Boundaries'],\n",
@@ -739,7 +797,7 @@
    "outputs": [],
    "source": [
     "# see all files that were downloaded (including data, metadata, and READMEs):\n",
-    "for root, dirs, files in os.walk(r'data\\DP3.30006.002'):\n",
+    "for root, dirs, files in os.walk(r'./data/DP3.30006.002'):\n",
     "    for name in files:\n",
     "        print(os.path.join(root, name))  # print file name"
    ]
@@ -760,7 +818,7 @@
    "outputs": [],
    "source": [
     "# see only the .h5 files that were downloaded\n",
-    "for root, dirs, files in os.walk(r'.\\data\\DP3.30006.002'):\n",
+    "for root, dirs, files in os.walk(r'./data/DP3.30006.002'):\n",
     "    for name in files:\n",
     "        if name.endswith('.h5'):\n",
     "            print(os.path.join(root, name))  # print file name"
@@ -909,7 +967,8 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "# serc_refl_h5 = r'./data/NEON_D02_SERC_DP3_364000_4305000_bidirectional_reflectance.h5' # if your h5 file is located directly under the \"data\" folder\n",
+    "# uncomment the line below and comment the following one if running from the Openscapes platform and you skipped the download step\n",
+    "# serc_refl_h5 = serc_refl_h5 = r'../../shared-public/data/neon/NEON_D02_SERC_DP3_364000_4305000_bidirectional_reflectance.h5'\n",
     "serc_refl_h5 = r'./data/DP3.30006.002/neon-aop-provisional-products/2025/FullSite/D02/2025_SERC_7/L3/Spectrometer/Reflectance/NEON_D02_SERC_DP3_364000_4305000_bidirectional_reflectance.h5'\n",
     "serc_refl_xr = aop_h5refl2xarray(serc_refl_h5)"
    ]
@@ -948,7 +1007,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apply this function on our xarray dataset. This should take a few seconds to run."
+    "Apply this function on our xarray dataset."
    ]
   },
   {
@@ -964,7 +1023,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.2 Explore the reflectance dataset\n",
+    "### 4.2 Visualize the reflectance dataset\n",
     "\n",
     "Display the dataset. You can use the up and down arrows to the left of the table (e.g. to the left of Dimensions, Coordinates, Data variables, etc.) to explore each part of the dataset in more detail. You can also click on the icons to the right to see more details."
    ]
