--- a/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/make_classification_training_data.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/make_classification_training_data.ipynb
@@ -363,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "veg_tower_tile_short = veg_tower_tile[['date','individualID','scientificName','taxonID','family','plotID','pointID','adjEasting','adjNorthing']]\n",
+    "veg_tower_tile_short = veg_tower_tile[['date','individualID','scientificName','taxonID','family','adjEasting','adjNorthing']]\n",
     "veg_tower_tile_short.reset_index(drop=True, inplace=True)\n",
     "veg_tower_tile_short"
    ]
@@ -422,7 +422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "veg_tower_tile_short.to_csv(r'.\\data\\serc_training_data.csv',index=False)"
+    "veg_tower_tile_short.to_csv(r'./data/serc_training_data.csv',index=False)"
    ]
   },
   {
