remove quotes around NEON_TOKEN variable

--- a/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/aop_refl_xarray_classification.ipynb
+++ b/tutorials/Python/AOP/Hyperspectral/classification/refl-h5-xarray/aop_refl_xarray_classification.ipynb
@@ -628,7 +628,7 @@
     "               site=site_id,\n",
     "               year=year,\n",
     "               include_provisional=True,\n",
-    "               token='NEON_TOKEN',\n",
+    "               token=NEON_TOKEN,\n",
     "               savepath='./data')"
    ]
   },
@@ -779,7 +779,7 @@
     "               easting=364005,\n",
     "               northing=4305005,\n",
     "               include_provisional=True,\n",
-    "               token='NEON_TOKEN',\n",
+    "               token=NEON_TOKEN,\n",
     "               savepath='./data')"
    ]
   },
